docs/api/qiskit/0.24/qiskit.optimization.problems.md
---
title: problems
description: API reference for qiskit.optimization.problems
in_page_toc_min_heading_level: 1
python_api_type: module
python_api_name: qiskit.optimization.problems
---

<span id="module-qiskit.optimization.problems" />

<span id="qiskit-optimization-problems" />

<span id="optimization-problems-qiskit-optimization-problems" />

# Optimization problems

<span id="module-qiskit.optimization.problems" />

`qiskit.optimization.problems¶`

# Quadratic program

<span id="module-qiskit.optimization.problems" />

`¶`

Structures for defining an optimization problem.

|                                                                                                                                                                   |                                                             |
| ----------------------------------------------------------------------------------------------------------------------------------------------------------------- | ----------------------------------------------------------- |
| [`QuadraticProgram`](qiskit.optimization.problems.QuadraticProgram#qiskit.optimization.problems.QuadraticProgram "qiskit.optimization.problems.QuadraticProgram") | Quadratically Constrained Quadratic Program representation. |

<Admonition title="Note" type="note">
  The following classes are not intended to be instantiated directly. Objects of these types are available within an instantiated [`QuadraticProgram`](qiskit.optimization.problems.QuadraticProgram#qiskit.optimization.problems.QuadraticProgram "qiskit.optimization.problems.QuadraticProgram").
</Admonition>

|                                                                                                                                                                                               |                                                                                                           |
| --------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- | --------------------------------------------------------------------------------------------------------- |
| [`Constraint`](qiskit.optimization.problems.Constraint#qiskit.optimization.problems.Constraint "qiskit.optimization.problems.Constraint")                                                     | Abstract Constraint Class.                                                                                |
| [`LinearExpression`](qiskit.optimization.problems.LinearExpression#qiskit.optimization.problems.LinearExpression "qiskit.optimization.problems.LinearExpression")                             | Representation of a linear expression by its coefficients.                                                |
| [`LinearConstraint`](qiskit.optimization.problems.LinearConstraint#qiskit.optimization.problems.LinearConstraint "qiskit.optimization.problems.LinearConstraint")                             | Representation of a linear constraint.                                                                    |
| [`QuadraticExpression`](qiskit.optimization.problems.QuadraticExpression#qiskit.optimization.problems.QuadraticExpression "qiskit.optimization.problems.QuadraticExpression")                 | Representation of a quadratic expression by its coefficients.                                             |
| [`QuadraticConstraint`](qiskit.optimization.problems.QuadraticConstraint#qiskit.optimization.problems.QuadraticConstraint "qiskit.optimization.problems.QuadraticConstraint")                 | Representation of a quadratic constraint.                                                                 |
| [`QuadraticObjective`](qiskit.optimization.problems.QuadraticObjective#qiskit.optimization.problems.QuadraticObjective "qiskit.optimization.problems.QuadraticObjective")                     | Representation of quadratic objective function of the form: constant + linear \* x + x \* quadratic \* x. |
| [`QuadraticProgramElement`](qiskit.optimization.problems.QuadraticProgramElement#qiskit.optimization.problems.QuadraticProgramElement "qiskit.optimization.problems.QuadraticProgramElement") | Interface class for all objects that have a parent QuadraticProgram.                                      |
| [`Variable`](qiskit.optimization.problems.Variable#qiskit.optimization.problems.Variable "qiskit.optimization.problems.Variable")                                                             | Representation of a variable.                                                                             |

